--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,4 +1,4 @@
-name: continuous integration
+name: CI/CD
 on:
   push:
     branches: [ master ]
@@ -20,3 +20,22 @@ jobs:
       - name: Run Tests
         run: |
           python -m unittest discover src/
+  deployment:
+      needs: test_suite
+      runs-on: ubuntu-latest
+      steps:
+        - name: Fresh clone & repo install
+          uses: appleboy/ssh-action@master
+          with:
+            #IP address of EC2 instance
+            host: 3.13.45.12
+            #User you created on the EC2 instance
+            username: github-actions
+            #Name of the secrets variable where you put your secret key
+            key: ${{ secrets.SSH_KEY }}
+            port: 22
+            script: |
+              rm -rf T2A3
+              git clone https://github.com/HarryCashel/T2A3.git
+              python3.8 -m venv /home/github-actions/T2A3/venv
+              /home/github-actions/T2A3/venv/bin/pip3.8 install -r /home/github-actions/T2A3/requirements.txt
